# SLaRC-HeavySeeker-HT25

./: .gitignore  .gitmodules  NOTICE  README.md  display_manager.py
docker/: Dockerfile  README.md  build.sh  compose.yaml
docs/: SolvedIssues.md
docs/Septentrio-gnss/: Septentrio.md
foxglove_extensions/click-to-goal/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  setup_extension.sh
foxglove_extensions/click-to-goal/msg/: WaypointCommand.idl  WaypointCommandMsgs.idl
foxglove_extensions/click-to-goal/src/: ClickToGoalPanel.css  ClickToGoalPanel.tsx  foxglove.json  index.ts
foxglove_extensions/click-to-goal/src/types/: Command.ts
foxglove_extensions/click-to-goal/srv/: WaypointCommand.idl
foxglove_extensions/status-panel/: CHANGELOG.md  README.md  package-lock.json  package.json
foxglove_extensions/status-panel/src/: index.ts  status_panel.tsx
ros_ws/: livox_build.sh
ros_ws/src/: launch_system_overview.drawio  launch_system_overview.html  livox_build.sh
ros_ws/src/FAST_LIO_SLAM_ros2/: CMakeLists.txt  README.md  package.xml
ros_ws/src/FAST_LIO_SLAM_ros2/PCD/: README.md
ros_ws/src/FAST_LIO_SLAM_ros2/config/: mid360.yaml
ros_ws/src/FAST_LIO_SLAM_ros2/launch/: mapping.launch.py
ros_ws/src/FAST_LIO_SLAM_ros2/src/: laserMapping.cpp  preprocess.h
ros_ws/src/hs_bringup/: CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md  package.xml
ros_ws/src/hs_bringup/config/: MID360_config.json  README.md  livox_lds_3d.lua  nav2_config.yaml  nav2_params.yaml  oakd_pro.yaml  rover_node.yaml  slam_async_config.yaml
ros_ws/src/hs_bringup/launch/: cartographer.launch.py  cloud2scan.launch.py  huskyNAV2.launch.py  livox3d_map.launch.py  main.launch.py  oakd.launch.py  rover_node.launch.py
ros_ws/src/hs_bringup/rviz/: display_point_cloud_ROS2.rviz
ros_ws/src/hs_cameras/: CMakeLists.txt  package.xml
ros_ws/src/hs_cameras/camera_server/: action_handler.py  camera_server.py
ros_ws/src/hs_cameras/cameras/: detect_cameras.py  manage_cameras.py  utils.py
ros_ws/src/hs_cameras/cameras/config/: cameras.yaml
ros_ws/src/hs_cameras/config/: cameras.yaml
ros_ws/src/hs_cameras/fpv_client/: action_handler.py  camera_monitor.py  client_service.py  decoder.py  fpv_client.py  image_decoder.py
ros_ws/src/hs_cameras/fpv_server/: action_handler.py  camera_encoder.py  camera_server.py  decoder.py  encoder.py  fpv_client.py  fpv_server.py  server_node.py  utils.py
ros_ws/src/hs_cameras/fpv_server/action/: StartCamera.action
ros_ws/src/hs_cameras/launch/: cameras.launch.py
ros_ws/src/hs_cameras/src/: camera_manager.py  detect_cameras.py  manage_cameras.py  utils.py
ros_ws/src/hs_cameras/src/detect_cameras/: detect_cameras.py
ros_ws/src/hs_cameras/utils/cameras/: __init__.py  utils.py
ros_ws/src/hs_cameras/utils/encoders/: base.py  detector.py  ffmpeg_probe.py  nvenc.py  settings.py  vaapi.py
ros_ws/src/hs_cameras/utils/server/: utils.py
ros_ws/src/hs_description/: CMakeLists.txt  package.xml
ros_ws/src/hs_description/launch/: hs_description.launch.py
ros_ws/src/hs_description/rviz/: seeker_sim_config.rviz
ros_ws/src/hs_description/sdf/: common.sdf.xacro  hs.sdf.xacro  livox.sdf.xacro  oakd.sdf.xacro
ros_ws/src/hs_description/urdf/: common.urdf.xacro  hs.urdf.xacro  oakd.urdf.xacro
ros_ws/src/hs_msgs/: CMakeLists.txt  package.xml
ros_ws/src/hs_msgs/action/: StopCamera.action
ros_ws/src/hs_msgs/msg/: OperationModes.msg  WaypointCommandMsgs.msg
ros_ws/src/hs_msgs/srv/: GetCameras.srv
ros_ws/src/hs_navigation/: CMakeLists.txt  package.xml
ros_ws/src/hs_navigation/config/: dual_ekf_navsat.yaml  ekf.yaml  mapviz.mvc  nav2_params.yaml
ros_ws/src/hs_navigation/hs_navigation/: __init__.py  gps_heading.py  gps_odom_node.py  imu_flipper.py  imu_g_to_ms2.py  waypoint_bridge_node.py
ros_ws/src/hs_robot/: CMakeLists.txt  package.xml
ros_ws/src/hs_robot/conf/: localization.yaml  nav2_params.yaml
ros_ws/src/hs_robot/include/hs_robot/: can_bus.cpp  can_bus.hpp
ros_ws/src/hs_robot/launch/: robot.launch.py  test.launch.py
ros_ws/src/hs_robot/src/: health_check.cpp  robot.cpp  test_node.cpp
ros_ws/src/s_bringup/: CMakeLists.txt  package.xml
ros_ws/src/s_bringup/config/: s_config.yaml
ros_ws/src/s_cameras/: CMakeLists.txt  package.xml
ros_ws/src/s_cameras/Heading_test/: test.py
ros_ws/src/s_cameras/camera_server/: __init__.py  action_handler.py  camera_encoder.py  camera_registry.py  camera_server.py  encoder_manager.py  server_node.py
ros_ws/src/s_cameras/config/: README.md  cameras.yaml  pcl_cams.yaml
ros_ws/src/s_cameras/fpv_client/: action_handler.py  camera_monitor.py  client_service.py  decoder.py  fpv_client.py  image_decoder.py
ros_ws/src/s_cameras/init_cameras/: detect_cameras.py  manage_cameras.py
ros_ws/src/s_cameras/init_cameras/camera_utils/: __init__.py  camera_config.py  depthai_utils.py  naming_utils.py  usb_utils.py
ros_ws/src/s_cameras/launch/: camera_server.launch.py  cameras.launch.py  multi_cameras.launch.py
ros_ws/src/s_cameras/utils/camera_utils/: camera_config.py
ros_ws/src/s_cameras/utils/cameras/: utils.py
ros_ws/src/s_cameras/utils/encoder_utils/: base.py  cpu.py  qsv.py  vaapi.py
ros_ws/src/s_cameras/utils/encoders/: __init__.py  cpu.py  detector.py  ffmpeg_probe.py  nvenc.py  qsv.py  settings.py
ros_ws/src/s_cameras/utils/server/: __init__.py  utils.py
ros_ws/src/s_common/: CMakeLists.txt  package.xml
ros_ws/src/s_control/: CMakeLists.txt  package.xml
ros_ws/src/s_description/: CMakeLists.txt  package.xml
ros_ws/src/s_interfaces/: CMakeLists.txt  package.xml
ros_ws/src/s_msgs/: CMakeLists.txt  package.xml
ros_ws/src/s_navigation/: CMakeLists.txt  package.xml
ros_ws/src/s_perception/: CMakeLists.txt  package.xml
ros_ws/src/s_robot/: CMakeLists.txt  package.xml
ros_ws/src/s_simulation/: CMakeLists.txt  package.xml
ros_ws/src/s_ui/: CMakeLists.txt  package.xml
ros_ws/src/s_ui/config/: seeker.rviz
ros_ws/src/s_ui/launch/: mapviz.launch.py  s_ui.launch.py
ros_ws/src/seeker_sim/: README.md  package.xml  setup.py
ros_ws/src/teleop_control/: CMakeLists.txt
(+101 files in other folders)
