<?xml version="1.0"?>
<package format="3">
  <name>hs_cameras</name>
  <version>0.0.1</version>
  <description>Camera management and streaming server for ROS 2</description>

  <maintainer email="slarc25@proton.me">Kim</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>depthai_ros_driver</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
